Modification nouvelle version du IUTGAME

--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <Reference Include="IUTGame">
-      <HintPath>..\IUTGame.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Desktop\IUTGame.dll</HintPath>
     </Reference>
   </ItemGroup>
 
