--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Logic\" />
     <Folder Include="Res\" />
     <Folder Include="Sounds\" />
     <Folder Include="Sprites\" />
