Ajout de font  plus les styles

--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grumson.cSharp.GamePad" Version="1.0.0.2" />
+    <PackageReference Include="XamlAnimatedGif" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Logic\" />
+    <Folder Include="Font\" />
     <Folder Include="Res\" />
     <Folder Include="Sounds\" />
     <Folder Include="Sprites\" />
