--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Font\BungeeInline-Regular.ttf" />
     <None Remove="Sprites\Background\background.gif" />
+    <None Remove="Sprites\Background\background.png" />
     <None Remove="Sprites\Background\Banner.png" />
     <None Remove="Sprites\Icon\pauseIcon.png" />
   </ItemGroup>
@@ -34,6 +35,7 @@
   <ItemGroup>
     <Resource Include="Font\BungeeInline-Regular.ttf" />
     <Resource Include="Sprites\Background\background.gif" />
+    <Resource Include="Sprites\Background\background.png" />
     <Resource Include="Sprites\Background\Banner.png" />
     <Resource Include="Sprites\Icon\pauseIcon.png" />
   </ItemGroup>
