Ajout de la classe SpaceInvader pour l'initialisation du jeu

--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -21,15 +21,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="IUTGame">
-      <HintPath>..\..\..\..\..\..\Desktop\IUTGame.dll</HintPath>
-    </Reference>
+    <Folder Include="Res\" />
+    <Folder Include="Sounds\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Logic\" />
-    <Folder Include="Res\" />
-    <Folder Include="Sounds\" />
+    <Reference Include="IUTGame">
+      <HintPath>..\IUTGame.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
