--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Font\BungeeInline-Regular.ttf" />
+    <None Remove="Sounds\opening.mp3" />
     <None Remove="Sprites\Background\background.gif" />
     <None Remove="Sprites\Background\background.png" />
     <None Remove="Sprites\Background\Banner.png" />
@@ -23,7 +24,6 @@
 
   <ItemGroup>
     <Folder Include="Res\" />
-    <Folder Include="Sounds\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <Resource Include="Font\BungeeInline-Regular.ttf" />
+    <Resource Include="Sounds\opening.mp3" />
     <Resource Include="Sprites\Background\background.gif" />
     <Resource Include="Sprites\Background\background.png" />
     <Resource Include="Sprites\Background\Banner.png" />
