Modification "life" et modifcation des "bloc" + CollideEffect + ajout sprite Bloc

--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -17,9 +17,15 @@
     <None Remove="Sprites\Background\background.gif" />
     <None Remove="Sprites\Background\background.png" />
     <None Remove="Sprites\Background\Banner.png" />
-    <None Remove="Sprites\Blocks\block1.png" />
-    <None Remove="Sprites\Blocks\block2.png" />
-    <None Remove="Sprites\Blocks\block3.png" />
+    <None Remove="Sprites\Blocks\Bloc1.png" />
+    <None Remove="Sprites\Blocks\Bloc2.png" />
+    <None Remove="Sprites\Blocks\Bloc3.png" />
+    <None Remove="Sprites\Blocks\Bloc4.png" />
+    <None Remove="Sprites\Blocks\Bloc5.png" />
+    <None Remove="Sprites\Blocks\Bloc6.png" />
+    <None Remove="Sprites\Blocks\Bloc7.png" />
+    <None Remove="Sprites\Blocks\Bloc8.png" />
+    <None Remove="Sprites\Blocks\Bloc9.png" />
     <None Remove="Sprites\Decor\alienb.png" />
     <None Remove="Sprites\Decor\alienr.png" />
     <None Remove="Sprites\Decor\alienv.png" />
@@ -58,9 +64,15 @@
     <Resource Include="Sprites\Background\background.gif" />
     <Resource Include="Sprites\Background\background.png" />
     <Resource Include="Sprites\Background\Banner.png" />
-    <Resource Include="Sprites\Blocks\block3.png" />
-    <Resource Include="Sprites\Blocks\block2.png" />
-    <Resource Include="Sprites\Blocks\block1.png" />
+    <Resource Include="Sprites\Blocks\Bloc1.png" />
+    <Resource Include="Sprites\Blocks\Bloc2.png" />
+    <Resource Include="Sprites\Blocks\Bloc3.png" />
+    <Resource Include="Sprites\Blocks\Bloc4.png" />
+    <Resource Include="Sprites\Blocks\Bloc5.png" />
+    <Resource Include="Sprites\Blocks\Bloc6.png" />
+    <Resource Include="Sprites\Blocks\Bloc7.png" />
+    <Resource Include="Sprites\Blocks\Bloc8.png" />
+    <Resource Include="Sprites\Blocks\Bloc9.png" />
     <Resource Include="Sprites\Decor\alienb.png" />
     <Resource Include="Sprites\Decor\alienr.png" />
     <Resource Include="Sprites\Decor\alienv.png" />
