Modification image bloc + CollideEffect

--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -17,15 +17,16 @@
     <None Remove="Sprites\Background\background.gif" />
     <None Remove="Sprites\Background\background.png" />
     <None Remove="Sprites\Background\Banner.png" />
-    <None Remove="Sprites\Blocks\Bloc1.png" />
-    <None Remove="Sprites\Blocks\Bloc2.png" />
-    <None Remove="Sprites\Blocks\Bloc3.png" />
-    <None Remove="Sprites\Blocks\Bloc4.png" />
-    <None Remove="Sprites\Blocks\Bloc5.png" />
-    <None Remove="Sprites\Blocks\Bloc6.png" />
-    <None Remove="Sprites\Blocks\Bloc7.png" />
-    <None Remove="Sprites\Blocks\Bloc8.png" />
-    <None Remove="Sprites\Blocks\Bloc9.png" />
+    <None Remove="Sprites\Blocks\bloc0.png" />
+    <None Remove="Sprites\Blocks\bloc1.png" />
+    <None Remove="Sprites\Blocks\bloc2.png" />
+    <None Remove="Sprites\Blocks\bloc3.png" />
+    <None Remove="Sprites\Blocks\bloc4.png" />
+    <None Remove="Sprites\Blocks\bloc5.png" />
+    <None Remove="Sprites\Blocks\bloc6.png" />
+    <None Remove="Sprites\Blocks\bloc7.png" />
+    <None Remove="Sprites\Blocks\bloc8.png" />
+    <None Remove="Sprites\Blocks\bloc9.png" />
     <None Remove="Sprites\Decor\alienb.png" />
     <None Remove="Sprites\Decor\alienr.png" />
     <None Remove="Sprites\Decor\alienv.png" />
@@ -67,15 +68,16 @@
     <Resource Include="Sprites\Background\background.gif" />
     <Resource Include="Sprites\Background\background.png" />
     <Resource Include="Sprites\Background\Banner.png" />
-    <Resource Include="Sprites\Blocks\Bloc1.png" />
-    <Resource Include="Sprites\Blocks\Bloc2.png" />
-    <Resource Include="Sprites\Blocks\Bloc3.png" />
-    <Resource Include="Sprites\Blocks\Bloc4.png" />
-    <Resource Include="Sprites\Blocks\Bloc5.png" />
-    <Resource Include="Sprites\Blocks\Bloc6.png" />
-    <Resource Include="Sprites\Blocks\Bloc7.png" />
-    <Resource Include="Sprites\Blocks\Bloc8.png" />
-    <Resource Include="Sprites\Blocks\Bloc9.png" />
+    <Resource Include="Sprites\Blocks\bloc0.png" />
+    <Resource Include="Sprites\Blocks\bloc1.png" />
+    <Resource Include="Sprites\Blocks\bloc2.png" />
+    <Resource Include="Sprites\Blocks\bloc3.png" />
+    <Resource Include="Sprites\Blocks\bloc4.png" />
+    <Resource Include="Sprites\Blocks\bloc5.png" />
+    <Resource Include="Sprites\Blocks\bloc6.png" />
+    <Resource Include="Sprites\Blocks\bloc7.png" />
+    <Resource Include="Sprites\Blocks\bloc8.png" />
+    <Resource Include="Sprites\Blocks\bloc9.png" />
     <Resource Include="Sprites\Decor\alienb.png" />
     <Resource Include="Sprites\Decor\alienr.png" />
     <Resource Include="Sprites\Decor\alienv.png" />
