Add tutprial page

--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -33,12 +33,14 @@
     <None Remove="Sprites\Decor\alienr.png" />
     <None Remove="Sprites\Decor\alienv.png" />
     <None Remove="Sprites\Decor\spaceship.png" />
+    <None Remove="Sprites\fleches.png" />
     <None Remove="Sprites\Hearts\heart1.png" />
     <None Remove="Sprites\Hearts\heart2.png" />
     <None Remove="Sprites\Hearts\heart3.png" />
     <None Remove="Sprites\Icon\pauseIcon.png" />
     <None Remove="Sprites\missile.png" />
     <None Remove="Sprites\missileAlien.png" />
+    <None Remove="Sprites\spacebar.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -81,12 +83,14 @@
     <Resource Include="Sprites\Decor\alienr.png" />
     <Resource Include="Sprites\Decor\alienv.png" />
     <Resource Include="Sprites\Decor\spaceship.png" />
+    <Resource Include="Sprites\fleches.png" />
     <Resource Include="Sprites\Hearts\heart1.png" />
     <Resource Include="Sprites\Hearts\heart2.png" />
     <Resource Include="Sprites\Hearts\heart3.png" />
     <Resource Include="Sprites\Icon\pauseIcon.png" />
     <Resource Include="Sprites\missile.png" />
     <Resource Include="Sprites\missileAlien.png" />
+    <Resource Include="Sprites\spacebar.png" />
   </ItemGroup>
 
 </Project>
