Ajout classe UFO et modification

--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -13,11 +13,13 @@
     <None Remove="Res\icon.ico" />
     <None Remove="Sounds\laser-sound.mp3" />
     <None Remove="Sounds\opening.mp3" />
+    <None Remove="Sounds\passageUFO.mp3" />
     <None Remove="Sounds\shoot.mp3" />
     <None Remove="Sounds\shoot.wav" />
     <None Remove="Sprites\Aliens\alienb.png" />
     <None Remove="Sprites\Aliens\alienr.png" />
     <None Remove="Sprites\Aliens\alienv.png" />
+    <None Remove="Sprites\Aliens\ufo.png" />
     <None Remove="Sprites\Background\background.gif" />
     <None Remove="Sprites\Background\background.png" />
     <None Remove="Sprites\Background\Banner.png" />
@@ -65,6 +67,9 @@
     <Content Include="Sounds\opening.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Sounds\passageUFO.mp3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Sounds\shoot.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -72,6 +77,7 @@
     <Resource Include="Sprites\Aliens\alienb.png" />
     <Resource Include="Sprites\Aliens\alienr.png" />
     <Resource Include="Sprites\Aliens\alienv.png" />
+    <Resource Include="Sprites\Aliens\ufo.png" />
     <Resource Include="Sprites\Background\background.gif" />
     <Resource Include="Sprites\Background\background.png" />
     <Resource Include="Sprites\Background\Banner.png" />
