--- a/Source/Space Invaders/Space Invaders/Space Invaders.csproj
+++ b/Source/Space Invaders/Space Invaders/Space Invaders.csproj
@@ -47,6 +47,8 @@
     <None Remove="Sprites\Hearts\heart2.png" />
     <None Remove="Sprites\Hearts\heart3.png" />
     <None Remove="Sprites\Icon\pauseIcon.png" />
+    <None Remove="Sprites\laser.png" />
+    <None Remove="Sprites\laser1.png" />
     <None Remove="Sprites\missile.png" />
     <None Remove="Sprites\missileAlien.png" />
     <None Remove="Sprites\spacebar.png" />
@@ -115,6 +117,8 @@
     <Resource Include="Sprites\Hearts\heart2.png" />
     <Resource Include="Sprites\Hearts\heart3.png" />
     <Resource Include="Sprites\Icon\pauseIcon.png" />
+    <Resource Include="Sprites\laser.png" />
+    <Resource Include="Sprites\laser1.png" />
     <Resource Include="Sprites\missile.png" />
     <Resource Include="Sprites\missileAlien.png" />
     <Resource Include="Sprites\spacebar.png" />
